# dbt-vitals

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dbt_doctor/: __init__.py  cli.py  findings.py  graph.py  parser.py  report.py  scoring.py
dbt_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dbt_doctor/modules/: documentation.py  duplicates.py  incremental.py  lineage.py  testing.py
dbt_vitals/: __init__.py  cli.py  graph.py  report.py  scoring.py
dbt_vitals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbt_vitals/modules/: documentation.py  duplicates.py  incremental.py  lineage.py  testing.py
examples/: sample_catalog.json  sample_manifest.json
tests/: test_dbt_doctor.py  test_dbt_vitals.py
